--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -80,7 +80,7 @@
   }
   &__techno-ref {
     position: absolute;
-    bottom: 5%;
+    bottom: 8%;
     left: 5%;
   }
 }
